Fix date visibility on mobile devices

--- a/assets/stylesheets/redproject.css
+++ b/assets/stylesheets/redproject.css
@@ -1383,8 +1383,7 @@ top: 0.5em;
 		 order: 2;
 		 -webkit-flex: 1;
 		 flex: 1;
-		 text-overflow: ellipsis;
-		 white-space: nowrap;
+		 padding-right: 1px;
 	 }
 	.issue-subject { font-size: 1.45em; }
     .wrapper .last-talk {
@@ -1394,9 +1393,9 @@ top: 0.5em;
         order: 10;
         margin-left: 2.5em;
         text-overflow: ellipsis;
-        white-space: nowrap;
         line-height: 1.3;
 		overflow: hidden;
+		max-height: 15px;
     }
     .wrapper .note-count {
         -webkit-order: 23;
